eks/modules/eks/sg-eks-master.tf
resource "aws_security_group" "eks-cluster" {
  name        = "${var.cluster_name}-cluster"
  description = "Cluster communication with worker nodes"
  //vpc_id      = "${aws_vpc.main.id}"
  vpc_id        = "${var.vpc_id}"

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.cluster_name}"
  }
}
